<resources>
    <string name="app_name">NLB</string>

    <string name="כניסת_מנהלים">  כניסת מנהלים</string>
    <string name="כניסת_הורים">  כניסת הורים</string>
    <string name="אימייל">אימייל:</string>
    <string name="סיסמא">סיסמא:</string>
    <string name="שם_פרטי">שם פרטי:</string>
    <string name="שם_משפחה">שם משפחה:</string>
    <string name="תעודת_זהות">תעודת זהות:</string>
    <string name="עיר_מגורים">עיר מגורים:</string>
    <string name="רחוב_ומספר">רחוב ומספר:</string>
    <string name="מס_טלפון">מספר טלפון:</string>
    <string name="זכר">זכר</string>
    <string name="נקבה">נקבה</string>
    <string name="מס_זהות">מספר זהות:</string>
    <string name="כיתה">כיתה:</string>
    <string name="ילד">ילד</string>
    <string name="ילדה">ילדה</string>
    <string name="מספר">מספר</string>
    <string name="בית_ספר">בית ספר:</string>
    <string name="סניף">סניף הבית</string>
    <string name="תפקיד">תפקיד: </string>
    <string name="התחברות">התחברות</string>
    <string name="בחירת_תאריך">בחר תאריך לידה</string>
    <string name="סיום_הרשמה">סיים הרשמה</string>
    <string name="בחירת_תמונה">בחר תמונה</string>
    <string name="חנות">איזור התשלומים</string>
    <string name="פרופיל">הפרופיל שלי</string>
    <string name="ילדים">הילדים שלי</string>
    <string name="מדריכים">המדריכים שלי</string>
    <string name="פעולות">הפעולות שלי</string>
    <string name="התנתקות">התנתקות</string>
    <string name="עדכון">עדכון פרופיל</string>
    <string name="מחיקה">מחיקה</string>
    <string name="הורדת_קובץ">לחץ כאן להורדת טופס כתיבת פעולה</string>
    <string name="סיום_עבודה">סיום תקופת העבודה</string>
    <string name="עדכון_נתונים">עדכון נתונים</string>
    <string name="בחר_תאריך_התחלה">תחילת תקופת העבודה (חובה)</string>
    <string name="בחר_תאריך_סיום">סיום תקופת העבודה (לא חובה)</string>
    <string name="הרשמה">הרשמה</string>
    <string name="ברוך_הבא">ברוך הבא </string>
    <string name="הוסף_ילד">הוסף ילד</string>
    <string name="עובדים">העובדים שלי</string>
    <string name="הוסף_עובד">הוסף עובד</string>
    <string name="עדכן_עובד">עדכן עובד</string>
    <string name="מדריכים_בהמתנה">מדריכים בהמתנה לאישור</string>
    <string name="אימייל_עובד_הערה">*על האימייל הנ"ל להיות אותו האימייל שאיתו נרשם אותו עובד</string>
    <string name="מדריכים_בהמתנה_הערה">לחץ על מדריך ברשימה על מנת לאשר אותו במערכת</string>
    <string name="מדריכים_להסרה_הערה">לחץ על מדריך ברשימה על מנת להסיר אותו מהמערכת</string>
    <string name="יצירת_פעולה_הערה">*ליצירת פעולה יש להכין קובץ DOCX ובו מתואר גוף הפעולה בלבד</string>
    <string name="תאריך_סיום_עובד_הערה">*על מנת לאפס את תאריך הסיום יש ללחוץ לחיצה ארוכה על הכפתור לבחירת תאריך הסיום</string>
    <string name="שם_פעולה">שם פעולה</string>
    <string name="הוסף_פעולה">הוסף פעולה</string>
    <string name="סיום">סיום</string>
    <string name="תאריך_פעולה">בחר תאריך לפעולה</string>
    <string name="לא_נבחרה_פעולה">לא נבחרה פעולה</string>
    <string name="פעולה_לשכבת_גיל">פעולה לכיתות:</string>
    <string name="דף_בית">דף הבית</string>
    <string name="הרשמה_לפעולה">הרשמה לפעולה</string>
    <string name="שעה_פעולה">בחר שעה לפעולה</string>
    <string name="פעולות_רשומות">פעולות רשומות</string>
    <string name="הודעות_נכנסות">הודעות נכנסות</string>
    <string name="חיפוש">חיפוש</string>
    <string name="איפוס">איפוס</string>
    <string name="יצירת_הודעה">יצירת הודעה</string>
    <string name="ביטול">ביטול</string>
    <string name="שליחה">שליחה</string>
    <string name="ההודעות_שלי">ההודעות שלי</string>
    <string name="כותרת_הודעה">כותרת ההודעה</string>
    <string name="גוף_הודעה">גוף ההודעה</string>
    <string name="כותרת_הודעה_עיצוב">כותרת ההודעה: </string>
    <string name="הילדים_שלי_הערה">לחיצה קצרה להרשמה לפעולה ולחיצה ארוכה לעדכון נתונים</string>
</resources>
