<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nlb_bground"
    android:orientation="vertical"
    tools:context=".admin_login">

    <ImageView
        android:id="@+id/nlb_logo_admin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:background="@color/blank"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/nlb_logo_removedbg" />

    <TextView
        android:id="@+id/title_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ozrad_bold"
        android:gravity="center_horizontal"
        android:text="@string/כניסת_מנהלים"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:gravity="right"
        android:inputType="textEmailAddress"
        android:hint="@string/אימייל" />

    <EditText
        android:id="@+id/password_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="textPassword"
        android:hint="@string/סיסמא" />

    <Button
        android:id="@+id/login_admin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_design"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:text="@string/התחברות"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:fontFamily="@font/ozrad_bold"
        android:textSize="30dp"
        />

</LinearLayout>