<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/nlb_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDeleteActivity"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_design_remove"
            android:layout_gravity="center"
            android:fontFamily="@font/ozrad_bold"
            android:text="@string/מחיקה"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnActivityTime"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="11dp"
            android:background="@drawable/button_design"
            android:backgroundTint="@color/nlb_blue_dark"
            android:fontFamily="@font/ozrad_bold"
            android:text="@string/שעה_פעולה"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnActivityDate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_design"
            android:backgroundTint="@color/nlb_blue_dark"
            android:fontFamily="@font/ozrad_bold"
            android:text="@string/תאריך_פעולה"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnUpdateActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="11dp"
        android:background="@drawable/button_design"
        android:backgroundTint="@color/nlb_blue_dark"
        android:fontFamily="@font/ozrad_bold"
        android:layout_marginTop="10dp"
        android:text="@string/סיום"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold" />

</LinearLayout>