<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/nlb_bground"
    tools:context=".workers_update">

    <TextView
        android:id="@+id/workers_update_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/ozrad_bold"
        android:text="@string/עדכן_עובד"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">


            <Spinner
                android:id="@+id/updRoleWorker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/roleTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ozrad_bold"
                android:text="@string/תפקיד"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/updStartDate"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_design"
            android:fontFamily="@font/ozrad_bold"
            android:text="@string/בחר_תאריך_התחלה"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/updRemoveWorker"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_design_remove"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:fontFamily="@font/ozrad_bold"
            android:text="@string/סיום_עבודה"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/updSaveWorker"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_design"
            android:fontFamily="@font/ozrad_bold"
            android:text="@string/עדכון_נתונים"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>