<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/nlb_bground"
    tools:context=".parents_login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/nlb_logo_removedbg" />

    <EditText
        android:id="@+id/parents_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="left"
        android:inputType="textEmailAddress"
        android:hint="@string/אימייל" />

    <EditText
        android:id="@+id/parents_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/סיסמא" />

    <Button
        android:id="@+id/parents_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_design"
        android:fontFamily="@font/ozrad_bold"
        android:text="@string/התחברות"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/parents_register"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_design"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/הורים_הרשמה"
        android:textStyle="bold"
        android:fontFamily="@font/ozrad_bold"
        android:textSize="30dp"
        />

</LinearLayout>