<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nlb_blue"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/add_worker_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/ozrad_bold"
        android:text="@string/יצירת_הודעה"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/message_headline"
        android:layout_width="220dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/ozrad_bold"
        android:textColorHint="@android:color/white"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:gravity="center"
        android:hint="כותרת ההודעה" />

    <EditText
        android:id="@+id/message_body"
        android:layout_width="350dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"
        android:maxLines="4"
        android:gravity="center"
        android:singleLine="false"
        android:scrollHorizontally="false"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/ozrad_bold"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:hint="גוף ההודעה" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancel_message"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_design_remove"
            android:fontFamily="@font/ozrad_bold"
            android:text="@string/ביטול"
            android:layout_marginEnd="20dp"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/send_message"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_design"
            android:backgroundTint="@color/nlb_blue_dark"
            android:fontFamily="@font/ozrad_bold"
            android:text="@string/שליחה"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>